@@ -13,6 +13,7 @@ General Enhancements:
 * Partsgroups can now be nested though this is not yet used by LSMB (Chris T)
 * Session expiration now with configurable behavior (Chris T)
 * Timecard system generalized to allow labor and materials cards too (Chris T)
+* Can now print envelopes or shipping labels from many screens (Chris T)
 
 Enhancing data integrity
 * No longer allow NULL amounts in acc_trans (Chris T)
